Improved pathing by TerZer